# act-ledger

./: README.md  SHIP-NOTES.md  pyproject.toml  smoke_test.py
src/claude_act/: __init__.py  compaction.py  config.py  detector.py  interceptor.py  pricing.py  storage.py  viewer.py
src/claude_act.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/claude_act/cli/: main.py
tests/: test_claude_act.py  test_cli_surface.py
