[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-act"
version = "0.1.0"
description = "ACT Ledger — local-first API cost tracking and session trace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
actl = "claude_act.cli.main:main"
act-ledger = "claude_act.cli.main:main"
claude-act = "claude_act.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
